--- a/Yummy/assets/css/login.css
+++ b/Yummy/assets/css/login.css
@@ -346,3 +346,9 @@ input:-webkit-autofill {
   bottom: 50px;
   right: 10px;
 }
+
+#login-demo {
+  position: absolute;
+  bottom: 50px;
+  right: 161px;
+}
